Página de mates terminada

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprobante</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>🤔</title>
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
     <div class="container">
@@ -12,6 +12,6 @@
         <button id="boton1">Sí</button>
         <button id="boton2">No</button>
     </div>
-    <script src="./funciones/index.js"></script>
+    <script src="funciones/index.js"></script>
 </body>
 </html>
