--- a/paginas/pagMates.html
+++ b/paginas/pagMates.html
@@ -3,13 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nueva Página</title>
+    <title>La decepción</title>
     <link rel="stylesheet" href="estilos/estilos_pagMates.css">
 </head>
 <body>
     <h1>Vaya sopresa 🥲</h1>
-    <p>Ya sabía yo que algo raro notaba... En fin, prosigo con tu regalo, pero... Ahora te lo tienes que ganar 😡</p>
-    <!-- Puedes agregar más contenido aquí -->
+    <p>Algo raro notaba yo... En fin, prosigo con tu regalo, pero... Ahora te lo tienes que ganar 😡</p>
+    
+    <p>Sé que no te gustan mucho las mates, así que... A hacer MATES!!<span>(Por cierto, a partir de ahora guárdate los números en azul que vayan apareciendo por las páginas como este <span class="numeroEspecial">"1"</span> (este es un ejemplo) :) )</span></p>
 
+    <!-------------------------------------------------------------------------------------------->
+    <h1 class="titulo_mates">Veamos...</h1>
+    <p>Test de inteligencia:</p>
+
+    <div class="operaciones-container" id="operacionesContainer">
+        <!-- Operación 1: 2 + 2 -->
+        <div>
+        </div>
+        <!-- Operaciones adicionales se añadirán dinámicamente mediante JavaScript -->
+    </div>
+
+    <div id="resultado"></div>
+
+    <button id="enviarBtn">Enviar Respuestas</button>
+
+    <script src="funciones/index_pagMates.js"></script>
+    <!-------------------------------------------------------------------------------------------->
 </body>
 </html>
