--- a/paginas/pagCarta.html
+++ b/paginas/pagCarta.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carta</title>
+    <link rel="stylesheet" href="estilos/estilos_pagCarta.css">
 </head>
 <body>
-    <h3>Para la periqueta</h3>
+    <h3>Para la periqueta 💚</h3>
+
+    <p>
+        Bueno mi amor, esta es una carta diferente a las demás. Primero de todo quiero pedirte perdón de corazón por los meses que he estado sin escribirte ninguna cartilla ni nada por el estilo por unos <span class="numeroEspecial">3</span> mesecillos. No he estado muy bien últimamente anímicamente (creo que se te ha olvidado de vez en cuando) y hemos estado discutiendo bastante y eso me ha bajado un poco el mooooooood. Pero bueno, no estamos aquí para deprimirnos.
+    </p>
+    <p>
+        CARIÑO, CUMPLIMOS FOCKING <span class="numeroEspecial">12</span><strong> MESES</strong> JUNTOS. 1 PUTO AÑO AGUANTÁNDOME. Es muy gratificante echar la vista para atrás y ver todos los momentos tan increíbles que hemos compartido juntos... Y LOS QUE QUEDAN, QUE YA TE VEO VENIR EHHHH! 😡
+    </p>
+    <p>
+        Una de las ventajas de hacerte una carta en una página web es que puedo usar emojiiiiissssss jajajajajj 😜😜😜. Tampoco te acostumbres porque no será muy común además de que es mi primera. <br> Me está quedando muy caca :(((
+    </p>
+    <p>
+        La verdad es que no puedo decir mucho más. Bueno sí... Quiero que sepas que aunque últimamente tengamos nuestras diferencias, no he dejado de quererte como el primer día. Eres una periquita de 10, muy loca, LOQUÍSIMA, me encantas y me PUTO flipas. Me encantan los vídeos que me envías bailando, me encantas, me encanta escucharte cantar, me encantas, me encanta verte, me encantas, me encanta que seas así de despistada (aunque a veces me cabree un poquito), me encantas, te he dicho que ME ENCANTASSSSS????????. <br> Estos meses he estado pensando en qué te podría regalar porque creo que poca cosa más se puede regalar ya que no nos hayamos hecho, y, nueva claro (y económica 😭😭😭😭). Hace unos exactamente <span class="numeroEspecial">73</span> días me paré a pensar, y, aunque creo que me ha quedado un poco corto y puede que no te esté agradando, tengo otra sopresa. 🤭🤭
+    </p>
+    <p>
+        Bien, ahora mismo te estarás preguntando: ¿Qué son los números que me has ido hecho recolectando?. Pues bien, son... una contraseña por así decirlo. <br> Parte también de que haya tardado tanto es porque pensar todo esto y hacerlo no ha sido tarea fácil, a parte, aún a día de hoy, estoy terminando una cosa que seguramente es lo que más ilusión te hará. Cuando lo ví pensé en tí y en que esto 100% te iba a ENCANTAR, como tú a mí vamos.
+    </p>
+    <p>
+        Dejando el suspense de lado... Mete los números que has ido recolectando para la sopresa final:
+    </p>
+
+    <div class="container">
+        <h1>Código</h1>
+        <label for="numeroInput">Mete aquí el código:</label>
+        <input type="text" id="numeroInput" placeholder="Escribe el código">
+        <button id="comprobarBtn">Comprobar</button>
+        <div id="resultadoContainer"></div>
+    </div>
+    <script src="funciones/index_pagCarta.js"></script>
 </body>
 </html>
